Fix scrollbar issue

--- a/src/windows/Project/Kanban/TaskDialog/TaskDialog.module.scss
+++ b/src/windows/Project/Kanban/TaskDialog/TaskDialog.module.scss
@@ -42,5 +42,5 @@
 }
 
 .descriptionPreview {
-  width: auto !important;
+  height: auto !important;
 }
